--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+
+<div class="container col-md-4 out_cont shadow-lg p-1 bg-white rounded">
+    <div class="d-flex p-2 justify-content-center col-xl-12  ">
+<p class="login p-2 text-center display-7 bg-dark text-white">LogIN</p>
+
+  
+    <form class="form-control"  (ngSubmit)="login()" >
+      <div class="form-group">
+        <label for="email">Email address</label>
+        <input type="email" class="form-control" id="email" formControlName="email" placeholder="Enter email">
+      </div>
+      <div class="form-group">
+        <label for="password1">Password</label>
+        <input type="password" class="form-control" id="password" formControlName="password" placeholder="Password">
+        <small id="passwordHelp" class="form-text text-muted">We'll never share your Password with anyone else.</small>
+      </div>    
+      <button type="submit" class="btn btn-primary">SignUp</button>
+      <div class="form-group d-flex mt-3 justify-content-between" >
+        <p>Registration Baki ?</p>
+      <a routerLink="/login" class="text-decoration-none">Switch To SignUP</a>
+      </div>
+    </form>
+    </div>
+  </div>
